src/test/resources/valid/mine/simpleFun.wacc
begin

int f(int a, int b, int c, int d, int e, int f, int g) is
    return g
end

int x = 1;
if (true) then
    int xx = 2
else
    int yy = 3
fi

end